--- a/app/public/404.html
+++ b/app/public/404.html
@@ -21,14 +21,8 @@
 
 	<div class="container">
 
-		<div class="jumbotron">
-			<h1 class=""><i aria-hidden="true"></i>Want to mash together? Take our survery and mash with local spuds.</h1>
-			<hr>
-			<br>
-
-			<div class="">
-				<a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span>Go to Survey</h4></button></a>
-			</div>
+    <div class="container">
+		<h2 class "404title">No spud zone.</h2>
 
 		</div>
 
