--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>FriendFinder</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+	<title>Taters and Tots</title>
 
 	<!-- Latest compiled and minified CSS & JS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -11,21 +14,18 @@
 
 	<!-- Font Awesome Glyphicons -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-
-	<!-- Chosen -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
+  <link rel = "stylesheet" type="text/css" href="style.css">
 
 </head>
 <body>
 
 	<div class="container">
 
-		<h2>Survey Questions</h2>
+		<h2>Spud or Duds</h2>
 		<hr>
 
 		<h3><strong>About You</strong></h3>
-		<h4>Name (Required)</h4>
+		<h4>What type of potato are you? (Required)</h4>
 		<input type="text" name="" id="name" class="form-control" required >
 
 		<h4>Link to Photo Image (Required)</h4>
@@ -34,10 +34,10 @@
 		<hr>
 
 		<h3><strong>Question 1</strong></h3>
-		<h4>Pizza is the best food ever.</h4>
+		<h4>You are proud to be born hydroponically.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q1">
 	 		<option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
+            <option value="1">1 (Strongly Agree)</option>
             <option value="2">2</option>
             <option value="3">3</option>
             <option value="4">4</option>
@@ -45,7 +45,7 @@
       	</select>
 
 		<h3><strong>Question 2</strong></h3>
-		<h4>You prefer the NBA over other sport leagues.</h4>
+		<h4>You prefer to mash instead of fry.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q2">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -57,7 +57,7 @@
 
 
 		<h3><strong>Question 3</strong></h3>
-		<h4>Marvel movies are better than DC  movies.</h4>
+		<h4>Sometimes you can be a bit cheesy.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q3">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -69,7 +69,7 @@
 
 
 		<h3><strong>Question 4</strong></h3>
-		<h4>You prefer dogs to other pets.</h4>
+		<h4>You never hold a grudge, not too salty.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q4">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -81,7 +81,7 @@
 
 
 		<h3><strong>Question 5</strong></h3>
-		<h4>You are a people person.</h4>
+		<h4>You are jaded, not longer a sweet potato.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q5">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -93,7 +93,7 @@
 
 
 		<h3><strong>Question 6</strong></h3>
-		<h4>It is often difficult for you to relate to other people’s feelings.</h4>
+		<h4>You are more of a tatter than a tot.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q6">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -105,7 +105,7 @@
 
 
 		<h3><strong>Question 7</strong></h3>
-		<h4>You aspire to be an entrepreneur.</h4>
+		<h4>McDonalds must be stopped before they wipe us all out.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q7">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -116,7 +116,7 @@
       	</select>
 
 		<h3><strong>Question 8</strong></h3>
-		<h4>You rarely get carried away by fantasies and ideas.</h4>
+		<h4>If you did have to choose, you would rather be an In n Out fry.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q8">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -127,7 +127,7 @@
       	</select>
 
 		<h3><strong>Question 9</strong></h3>
-		<h4>You think that everyone’s views should be respected regardless of whether they are supported by facts or not.</h4>
+		<h4>Every once in a while you like to get baked.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q9">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -138,7 +138,7 @@
       	</select>
 
 		<h3><strong>Question 10</strong></h3>
-		<h4>Your favorite thing to do after a huge meal is lounge on the couch.</h4>
+		<h4>You feel comfortable with your peel off.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q10">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -158,7 +158,7 @@
 		<hr>
 	    <footer class="footer">
 	      <div class="container">
-		        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a></p>
+		        <p><a href="/api/taters">API Taters List</a></p>
 	      </div>
 	    </footer>
 
@@ -172,7 +172,7 @@
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal">&times;</button>
-	        <h2 class="modal-title"><strong>Best Match</strong></h2>
+	        <h2 class="modal-title"><strong>You've been mashed!</strong></h2>
 	      </div>
 	      <div class="modal-body">
 	        <h2 id="matchName"></h2>
@@ -200,10 +200,10 @@
       $(selector).chosen(config[selector]);
     }
 
-    // Capture the form inputs
+
     $("#submit").on("click", function(){
 
-    	// Form validation
+
     	function validateForm() {
 		  var isValid = true;
 		  $('.form-control').each(function() {
@@ -219,35 +219,36 @@
 		  return isValid;
 		}
 
-		// If all required fields are filled
+
 		if (validateForm() == true)
 		{
-			// Create an object for the user's data
-	    	var userData = {
+
+	    	var userTaterData = {
 	    		name: $("#name").val(),
 	    		photo: $("#photo").val(),
 	    		scores: [$("#q1").val(), $("#q2").val(), $("#q3").val(), $("#q4").val(), $("#q5").val(), $("#q6").val(), $("#q7").val(), $("#q8").val(), $("#q9").val(), $("#q10").val(), ]
 	    	}
 
 
-	    	// Grab the URL of the website
-	    	var currentURL = window.location.origin;
 
-	    	// AJAX post the data to the friends API.
-	    	$.post(currentURL + "/api/friends", userData, function(data){
+	    	var URL = window.location.origin;
 
-	    		// Grab the result from the AJAX post so that the best match's name and photo are displayed.
+
+	    	$.post(URL + "/api/taters", userTaterData, function(data){
+
+          console.log(data);
+
 	    		$("#matchName").text(data.name);
 	    		$('#matchImg').attr("src", data.photo);
 
-		    	// Show the modal with the best match
+
 		    	$("#resultsModal").modal('toggle');
 
 	    	});
 		}
 		else
 		{
-			alert("Please fill out all fields before submitting!");
+			alert("Of course you didn't fill out all the required fields. You're a potato and do not have fingers. Please find someone to fill in all the fields please!");
 		}
 
     	return false;
